Add portfolio into personal website

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-<!-- 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li> -->
+	        <!--  <li><a class="smoothscroll" href="#resume">Resume</a></li> -->
+            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
          <!--    <li><a class="smoothscroll" href="#contact">Contact</a></li> -->
          </ul> <!-- end #nav -->
@@ -65,6 +65,8 @@
                <li><a href="https://plus.google.com/u/0/112778314991138038593/about"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.linkedin.com/profile/view?id=212441101"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="http://instagram.com/haoyu.chen/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://github.com/haoyuchen1992"><i class="fa fa-github-square"></i></a></li>
+               
 <!--                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
                <li><a href="#"><i class="fa fa-skype"></i></a></li> -->
             </ul>
@@ -76,6 +78,8 @@
       </p>
 
    </header> <!-- Header End -->
+
+
 
 
    <!-- About Section
@@ -127,6 +131,174 @@
 
    </section> <!-- About Section End-->
 
+<!-- Portfolio Section
+   ================================================== -->
+<section id="portfolio">
+
+      <div class="row">
+
+         <div class="twelve columns collapsed">
+
+            <h1>Check Out Some of My Works.</h1>
+
+            <!-- portfolio-wrapper -->
+            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-01" title="">
+                        <img alt="" src="images/portfolio/MOOCcup372.jpg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>Research Assistant</h5>
+                              <p>Lighthouse MOOC, Based on Google Open Source Project - CourseBuilder</p>
+                           </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-02" title="">
+                        <img alt="" src="images/portfolio/mobell372.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>Web Developer</h5>
+                              <p> Internship</p>
+                           </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-03" title="">
+                        <img alt="" src="images/portfolio/crazy8press372.jpeg">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>Web Developer</h5>
+                              <p>Part-Time Job</p>
+                           </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
+               <div class="columns portfolio-item">
+                  <div class="item-wrap">
+
+                     <a href="#modal-04" title="">
+                        <img alt="" src="images/portfolio/oce372.png">
+                        <div class="overlay">
+                           <div class="portfolio-item-meta">
+                              <h5>Part-Time Job</h5>
+                              <p>Web Developer</p>
+                           </div>
+                        </div>
+                        <div class="link-icon"><i class="icon-plus"></i></div>
+                     </a>
+
+                  </div>
+               </div> <!-- item end -->
+
+              
+
+            </div> <!-- portfolio-wrapper end -->
+
+         </div> <!-- twelve columns end -->
+
+
+         <!-- Modal Popup
+         --------------------------------------------------------------- -->
+
+         <div id="modal-01" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/modals/MOOCcup500.jpg" alt="">
+
+            <div class="description-box">
+               <h4>LightHouse MOOC</h4>
+               <p>The goals of Lighthouse MOOC are to share strategies, research-based practices, and field-tested good ideas for teaching computer science in a way that reaches all students regardless of sex or ethnicity. </p>
+               <span class="categories"><i class="fa fa-tag"></i>Research Assistant, University of Virginia </span>
+            </div>
+
+            <div class="link-box">
+               <a href="https://coursebuilder01.appspot.com/about">Demo Website</a>
+               <a href="https://github.com/haoyuchen1992/CourseBuilder"> < GitHub > </a>
+               <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-01 End -->
+
+         <div id="modal-02" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/modals/mobell500.png" alt="">
+
+            <div class="description-box">
+               <h4>Web Developer Internship</h4>
+               <p>I worked as web developer to implement the first website for MoBellMuscle Company. MoBell Muscle designs, develops and delivers transportable strength-building equipment and training programs for individuals</p>
+               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
+            </div>
+
+            <div class="link-box">
+               <a href="http://www.mobellmuscle.com">Details</a>
+                   <a href="https://github.com/haoyuchen1992/Front-end-Practice-Project"> < GitHub > </a>
+               <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-02 End -->
+
+         <div id="modal-03" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/modals/crazy8press500.jpeg" alt="">
+
+            <div class="description-box">
+               <h4>Web Developer</h4>
+               <p>I was in charge of revising the website and adding new functionality, for example newest posting, calender. Crazy 8 Press is a team of best-selling, award-winning sci-fi & fantasy authors creating new fiction. A mix of SF/F action, adventure, comedy, mystery, and mythology.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Internship</span>
+            </div>
+
+            <div class="link-box">
+               <a href="http://crazy8press.com/">Details</a>
+               <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-03 End -->
+
+         <div id="modal-04" class="popup-modal mfp-hide">
+
+            <img class="scale-with-grid" src="images/portfolio/modals/oce500.png" alt="">
+
+            <div class="description-box">
+               <h4>Web Developer</h4>
+               <p> Develop Ebay Template for OceStore to demostrate their products.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Part-Time Job</span>
+            </div>
+
+            <div class="link-box">
+               <a href="http://www.ebay.com/usr/ocestore">Details</a>
+               <a class="popup-modal-dismiss">Close</a>
+            </div>
+
+         </div><!-- modal-04 End -->
+
+
+
+
+
+      </div> <!-- row End -->
+
+   </section> <!-- Portfolio Section End-->
 
    <section id="testimonials">
 
@@ -189,6 +361,7 @@
                <li><a href="https://plus.google.com/u/0/112778314991138038593/about"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.linkedin.com/profile/view?id=212441101"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="http://instagram.com/haoyu.chen/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://github.com/haoyuchen1992"><i class="fa fa-github-square"></i></a></li>
             </ul>
 
             <ul class="copyright">
