Update and clear

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <h2>About Me</h2>
 
-            <p> I am currently looking for an <span style="color: white;"> <strong>internship or full time job</strong> </span> on web development.
+            <p> I am currently looking for an <span style="color: white;"> <strong> full time job</strong> </span> on software engineering.
             </p>
 
             <div class="row">
@@ -108,7 +108,7 @@
                   <h2>Contact Details</h2>
                   <p class="address">
 						   <span>Haoyu Chen</span><br>
-						   <span>212 Maury AVE, APT 4<br>
+						   <span>210 Maury AVE, APT 12<br>
 						         Charlottesville, VA 22903 US
                      </span><br>
 						   <span>(434)326-8678</span><br>
@@ -228,12 +228,12 @@
 
             <div class="description-box">
                <h4>LightHouse MOOC</h4>
-               <p>The goals of Lighthouse MOOC are to share strategies, research-based practices, and field-tested good ideas for teaching computer science in a way that reaches all students regardless of sex or ethnicity. </p>
+               <p>Lighthouse MOOC is a project that aims at developing an online courses for computer science faculties in commumity college. My major responsibility is to design and implement online platform based on <a href="https://www.google.com/edu/openonline/tech/index.html">CourseBuilder</a> (Google open source project)</p>
                <span class="categories"><i class="fa fa-tag"></i>Research Assistant, University of Virginia </span>
             </div>
 
             <div class="link-box">
-               <a href="https://coursebuilder01.appspot.com/about">Demo Website</a>
+               <a href="https://coursebuilder03.appspot.com/preview">Demo Website</a>
                <a href="https://github.com/haoyuchen1992/CourseBuilder"> < GitHub > </a>
                <a class="popup-modal-dismiss">Close</a>
             </div>
@@ -359,13 +359,13 @@
                <li><a href="https://www.facebook.com/brian.chan.9066"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://twitter.com/Brian19921006"><i class="fa fa-twitter"></i></a></li>
                <li><a href="https://plus.google.com/u/0/112778314991138038593/about"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="https://www.linkedin.com/profile/view?id=212441101"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/chenhaoyu"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="http://instagram.com/haoyu.chen/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://github.com/haoyuchen1992"><i class="fa fa-github-square"></i></a></li>
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
+               <li>&copy; Copyright 2015 CeeVee</li>
                <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
             </ul>
 
