clear unused code and refine css

--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
             </div>
 
             <div class="link-box">
-               <a href="https://coursebuilder03.appspot.com/preview">Demo Website</a>
-               <a href="https://github.com/haoyuchen1992/CourseBuilder"> < GitHub > </a>
+               <button><a href="https://coursebuilder03.appspot.com/preview">Demo Website</a></button>
+               <button><a href="https://github.com/haoyuchen1992/CourseBuilder"> GitHub </a></button>
                <a class="popup-modal-dismiss">Close</a>
             </div>
 
