Update Project Content

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/mobell372.png">
+                        <img alt="" src="images/portfolio/cos372.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
                               <h5>Web Developer</h5>
@@ -182,11 +182,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/crazy8press372.jpeg">
+                        <img alt="" src="images/portfolio/stackoverflow372.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-                              <h5>Web Developer</h5>
-                              <p>Part-Time Job</p>
+                              <h5>Full Stack Developer</h5>
+                              <p>Course Project</p>
                            </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -199,11 +199,11 @@
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/oce372.png">
+                        <img alt="" src="images/portfolio/hanoi372.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-                              <h5>Part-Time Job</h5>
-                              <p>Web Developer</p>
+                              <h5>Full Stack Developer</h5>
+                              <p>Course Project</p>
                            </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -242,17 +242,17 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/modals/mobell500.png" alt="">
+            <img class="scale-with-grid" src="images/portfolio/modals/cos500.png" alt="">
 
             <div class="description-box">
-               <h4>Web Developer Internship</h4>
-               <p>I worked as web developer to implement the first website for MoBellMuscle Company. MoBell Muscle designs, develops and delivers transportable strength-building equipment and training programs for individuals</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
+               <h4>Web Design Intern</h4>
+               <p>As part of Scrum team, working closely with UI leader and product manager, prototype web pages and make design decisions. Beside implementing design, I am also asked to fix as many as possible UI bugs listed on JIRA and apply style guide to the whole site.
+               <span class="categories"><i class="fa fa-tag"></i>UI Design, Web Development</span>
             </div>
 
             <div class="link-box">
-               <a href="http://www.mobellmuscle.com">Details</a>
-                   <a href="https://github.com/haoyuchen1992/Front-end-Practice-Project"> < GitHub > </a>
+               <button><a href="https://osf.io/">Open Science Framework</a></button>
+               <button><a href="https://github.com/CenterForOpenScience/osf.io">GitHub</a></button>
                <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -260,16 +260,17 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/modals/crazy8press500.jpeg" alt="">
+            <img class="scale-with-grid" src="images/portfolio/modals/stackoverflow500.png" alt="">
 
             <div class="description-box">
-               <h4>Web Developer</h4>
-               <p>I was in charge of revising the website and adding new functionality, for example newest posting, calender. Crazy 8 Press is a team of best-selling, award-winning sci-fi & fantasy authors creating new fiction. A mix of SF/F action, adventure, comedy, mystery, and mythology.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Internship</span>
+               <h4>StackOverFlow Question Search</h4>
+               <p>As course project for text mining, I designed and implemented question search engine for 8 millions StackOverflow questions. Our comparison implementation is the question recommendation system on StackOverflow. There are two major UI improvements. 
+               <span class="categories"><i class="fa fa-tag"></i>UI Design, Text Mining, Solr Search</span>
             </div>
 
             <div class="link-box">
-               <a href="http://crazy8press.com/">Details</a>
+               <button><a href="https://stackoverflow-search.appspot.com/">Demo Website</a></button>
+               <button><a href="https://github.com/haoyuchen1992/StackOverFlow-Question-Search">GitHub Repository</a></button>
                <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -277,16 +278,17 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/modals/oce500.png" alt="">
+            <img class="scale-with-grid" src="images/portfolio/modals/hanoi500.png" alt="">
 
             <div class="description-box">
-               <h4>Web Developer</h4>
-               <p> Develop Ebay Template for OceStore to demostrate their products.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Part-Time Job</span>
+               <h4>Online Experiment Platform for Representations in Distributed Cognitive Tasks</h4>
+               <p>In this project, I developed an complete online experiment platform for representations in distributed cognitive tasks. It implemented two forms of Hanoi of towers and enable to collect online player's game grades.What's more, lots of UI design consideration were involved.
+               <span class="categories"><i class="fa fa-tag"></i>UI Design, Web Development</span>
             </div>
 
             <div class="link-box">
-               <a href="http://www.ebay.com/usr/ocestore">Details</a>
+               <button><a href="https://newpriceline.appspot.com/">Demo Website</a></button>
+               <button><a href="https://github.com/haoyuchen1992/Online-Cognitive-Experiment">Github Repository</a></button>
                <a class="popup-modal-dismiss">Close</a>
             </div>
 
