--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-            <img class="scale-with-grid" src="images/portfolio/modals/hanoi500.png" alt="">
+            <img class="scale-with-grid" src="images/portfolio/modals/hanoi500.jpeg" alt="">
 
             <div class="description-box">
                <h4>Online Experiment Platform for Representations in Distributed Cognitive Tasks</h4>
